Revert "Fix minio bogues (#834)" (#840)
This reverts commit c13fbdb4e7ed6603259f4337c363b094132a2411.